--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,10 @@
 	 			var num = document.getElementById("n1");
 	 			num.value = Math.pow(num.value, 3);
 			}
+			function four() {  
+				var num = document.getElementById("n1");  
+				num.value = Math.pow(num.value, 4);
+			}
 			function onex() {  
 				var num = document.getElementById("n1");  
 				num.value = 1/num.value;
@@ -24,6 +28,7 @@
 	 	<p>
 	 	<button onclick="two()"> x^2 </button> 
 	 	<button onclick="cube()"> x^3 </button> 
+	 	<button onclick="four()"> x^4 </button>
 	 	<button onclick="onex()"> 1/x </button> 
 	 	</p>
 	</body>
