--- a/calculator.html
+++ b/calculator.html
@@ -19,6 +19,10 @@
 				var num = document.getElementById("n1");  
 				num.value = 1/num.value;
 			}
+			function sin() {  
+				var num = document.getElementById("n1");  
+				num.value = Math.sin(num.value);
+			}
 		</script>
 	</head>
 	<body>
@@ -30,6 +34,7 @@
 	 	<button onclick="cube()"> x^3 </button> 
 	 	<button onclick="four()"> x^4 </button>
 	 	<button onclick="onex()"> 1/x </button> 
+	 	<button onclick="sin()"> sin(x) </button>
 	 	</p>
 	</body>
 </html>
